--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react-native": "^0.70.8",
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components-react-native": "^5.2.0",
+    "react-native-svg-transformer": "^1.0.0",
     "typescript": "^4.9.4"
   },
   "private": true
