--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo-google-fonts/poppins": "^0.2.2",
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.1",
+    "deprecated-react-native-prop-types": "^4.0.0",
     "expo": "~47.0.9",
     "expo-font": "~11.0.1",
     "expo-navigation-bar": "~2.0.1",
@@ -23,6 +24,7 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "13.4.0",
     "styled-components": "^5.3.6"
   },
@@ -32,6 +34,7 @@
     "@types/jest": "^29.2.4",
     "@types/react": "^18.0.26",
     "@types/react-native": "^0.70.8",
+    "@types/react-native-snap-carousel": "^3.8.5",
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components-react-native": "^5.2.0",
     "react-native-svg-transformer": "^1.0.0",
